instalacion de cors y agregamos el atributo password en user
