# src/models/User.js
@@ -1,4 +1,5 @@
 const mongoose = require('mongoose');
+const bcrypt = require('bcryptjs');
 
 const userSchema = new mongoose.Schema(
     {
@@ -7,6 +8,10 @@ const userSchema = new mongoose.Schema(
             required: [true, "El nickname es obligatorio"],
             unique: true,
             trim: true
+        },
+        password: {
+            type: String,
+            required: [true, "La contraseña es obligatoria"]
         },
         followers: [{
             type: mongoose.Schema.Types.ObjectId,
@@ -24,6 +29,12 @@ const userSchema = new mongoose.Schema(
         id: false
     }
 );
+
+userSchema.pre('save', async function () {
+    if (!this.isModified('password')) return;
+    const salt = await bcrypt.genSalt(10);
+    this.password = await bcrypt.hash(this.password, salt);
+});
 
 userSchema.virtual('posts', {
     ref: 'Post',
